[metadata]
name = dc_check
author = Ian Wells
author_email = iawells@cisco.com
summary = Emulates wiring check of a DC rack
description_file =
    README.md
description_content_type = text/markdown
requires_python = >=3.7
license = Proprietary
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    dc_check

[entry_points]
console_scripts =
     dc-check-server=dc_check.server_cmd:main
     dc-read-config=dc_check.read:cmd